Attempted to add aurelia styling

--- a/index.ejs
+++ b/index.ejs
@@ -5,6 +5,7 @@
     <title><%- htmlWebpackPlugin.options.metadata.title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="<%- htmlWebpackPlugin.options.metadata.baseUrl %>">
+    <link href="https://fonts.googleapis.com/css?family=Domine:700%7COpen+Sans:400,600%7CSource+Code+Pro:500" rel="stylesheet" type="text/css">
     <!-- imported CSS are concatenated and added automatically -->
   </head>
   <body aurelia-app="main">
