--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -68,4 +68,4 @@
 @import '../../node_modules/font-awesome/scss/icons';
 @import '../../node_modules/font-awesome/scss/screen-reader';
 
-@import 'blog';
+@import 'aurelia';
