--- a/src/styles/_aurelia.scss
+++ b/src/styles/_aurelia.scss
@@ -1,3 +1,10 @@
+$twitter-color: #55acee;
+$gplus-color: #dd4b39;
+$github-color: #171515;
+$linkedin-color: #0e76a8;
+$facebook-color: #3b5998;
+
+
 .pulsate {
   opacity: 1.0;
   bottom: 0%;
@@ -219,6 +226,24 @@ footer {
   background: #fff;
 }
 
+.smallbutton {
+  color: #686868;
+  border: 2px solid #c3c2c9;
+  background: #fff;
+}
+.smallbutton.twitter:hover {
+  color: #fff;
+  border: 2px solid darken($twitter-color, 15%);
+  background: $twitter-color;
+}
+
+.smallbutton.googleplus:hover {
+  color: #fff;
+  border: 2px solid darken($gplus-color, 15%);
+  background: $gplus-color;
+}
+
+
 .titlebar {
   position: fixed;
   z-index: 100;
@@ -387,6 +412,7 @@ section.aboutBody {
     float: left;
     width: 12%;
     border-radius: 96px;
+    margin: 15px 15px 0 0;
   }
 
   .info {
@@ -396,7 +422,7 @@ section.aboutBody {
 
     h4 {
       font: 600 20px 'Open Sans', Serif !important;
-      margin: 20px 0 10px;
+      margin: 10px 0 0 0;
     }
   }
 
@@ -412,8 +438,8 @@ section.aboutBody {
 
   .social {
     overflow: hidden;
-    margin: 20px 0 0;
-    padding: 0;
+    margin: 0;
+    padding: 10px 0 0 0;
     list-style: none;
     -webkit-transition: all .25s ease-out;
     -moz-transition: all .25s ease-out;
@@ -541,12 +567,10 @@ section.aboutBody {
       transition: all .25s ease-out;
       text-align: center;
       color: #fff;
-      border-radius: 41px;
+      border-radius: 28px;
     }
   }
 }
-
-
 
 nav .toggle i {
   color: #b0b0b0;
@@ -619,4 +643,240 @@ nav .toggle i {
       color: #b0b0b0;
     }
   }
+}
+
+.profile {
+    position: fixed;
+    z-index: 400;
+    top: 130px;
+    right: 5%;
+    width: 15%;
+    -webkit-backface-visibility: hidden;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out
+}
+
+.profile.stuck {
+    opacity: 0.5
+}
+.profile:hover {
+    opacity: 1.0
+}
+.profile.hide {
+    opacity: 0
+}
+.profile .profileimage {
+    width: 96px;
+    height: 96px;
+    margin: 10px 0;
+    border-radius: 96px
+}
+.profile h4 {
+    margin: 15px 0
+}
+.profile ul {
+    float: left;
+    overflow: hidden;
+    margin: 0;
+    padding: 0
+}
+.profile ul li {
+    float: left;
+    list-style: none
+}
+.profile strong {
+    font: 600 14px 'Open Sans', Serif;
+    margin: 20px 0 10px;
+    color: #3a3a3a
+}
+.profile p {
+    font: 400 15px 'Open Sans', Serif;
+    line-height: 28px;
+    clear: both;
+    overflow: hidden;
+    max-height: 136px;
+    margin: 0 0 10px 0;
+    text-overflow: ellipsis
+}
+.profile p a {
+    color: #3b7bbf
+}
+.profile hr {
+    width: 100%;
+    height: 1px;
+    margin: 10px 0;
+    border: 0;
+    background: #b6b6b6
+}
+.profile .tweet {
+    font: 600 12px 'Open Sans', Serif;
+    line-height: 24px;
+    margin: 20px 0
+}
+.profile .tweet span {
+    display: block;
+    text-align: left;
+    color: #848484
+}
+@media screen and (max-width: 1350px) {
+    .profile {
+        opacity: 0
+    }
+}
+@media screen and (max-width: 1330px) {
+    .profile {
+        display: none !important
+    }
+}
+@media screen and (max-height: 640px) {
+    .profile {
+        display: none !important
+    }
+}
+.postprofile {
+    overflow: hidden;
+    margin: 30px 0;
+    padding: 30px 0;
+    border-top: 1px solid #b3b3b3;
+    border-bottom: 1px solid #b3b3b3
+}
+.postprofile .author {
+    display: block;
+    float: left;
+    width: 12%;
+    border-radius: 96px
+}
+.postprofile .info {
+    display: block;
+    float: right;
+    width: 82%
+}
+.postprofile h4 {
+    margin: 15px 0
+}
+.postprofile p {
+    font: 400 14px 'Open Sans', Serif;
+    line-height: 32px;
+    margin: 15px 0
+}
+.postprofile .social {
+    overflow: hidden;
+    margin: 20px 0 0;
+    padding: 0;
+    list-style: none;
+    -webkit-transition: all .25s ease-out;
+    -moz-transition: all .25s ease-out;
+    -o-transition: all .25s ease-out;
+    transition: all .25s ease-out;
+    -webkit-transform: translateZ(0)
+}
+.postprofile ul {
+    margin: 0 10px 10px 0
+}
+.postprofile li {
+    float: left;
+    margin: 0 10px 10px 0;
+    padding: 0
+}
+.postprofile li a {
+    display: inline-block;
+    width: 40px;
+    padding: 9px 0;
+    -webkit-transition: all .25s ease-out;
+    -moz-transition: all .25s ease-out;
+    -o-transition: all .25s ease-out;
+    transition: all .25s ease-out;
+    text-align: center;
+    color: #fff;
+    border-radius: 41px
+}
+@media screen and (max-width: 320px) {
+    .postprofile .author {
+        float: none;
+        width: 25%
+    }
+    .postprofile .info {
+        float: none;
+        width: 100%
+    }
+}
+
+.smallsocial {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin: 0 3px 10px;
+  text-align: center;
+  color: #606060;
+  background: #efefef;
+  border-radius: 36px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+
+  i {
+    position: relative;
+    vertical-align: -5px;
+  }
+}
+
+.smallsocial.twitter:hover {
+  color: #fff;
+  background: #55acee;
+}
+
+.smallsocial.facebook:hover {
+  color: #fff;
+  background: #3b5998;
+}
+
+.smallsocial.googleplus:hover {
+  color: #fff;
+  background: #dd4b39;
+}
+
+.smallsocial.github:hover {
+  color: #fff;
+  background: #171515;
+}
+
+.smallsocial.instagram:hover {
+  color: #fff;
+  background: #3f729b;
+}
+
+.smallsocial.youtube:hover {
+  color: #fff;
+  background: #c4302b;
+}
+
+.smallsocial.pinterest:hover {
+  color: #fff;
+  background: #c8232c;
+}
+
+.smallsocial.linkedin:hover {
+  color: #fff;
+  background: #0e76a8;
+}
+
+.smallsocial.skype:hover {
+  color: #fff;
+  background: #00aff0;
+}
+
+.smallsocial.tumblr:hover {
+    color: #fff;
+    background: #34526f;
+}
+
+.smallsocial.stackoverflow:hover {
+  color: #fff;
+  background: #fe7a15;
+}
+
+.smallsocial.rss:hover {
+  color: #fff;
+  background: #ee802f;
 }
