--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1,32 +1,32 @@
 // Bootstrap v4.0.0-beta.3 (https://getbootstrap.com)
 
 // Fix for bootstrap beta, due to variable used by variables being in new functions
-@import '../../node_modules/bootstrap/scss/functions.scss'; 
+@import "../../node_modules/bootstrap/scss/functions.scss";
 
-@import '../../node_modules/bootstrap/scss/variables';
-@import 'variables';
+@import "../../node_modules/bootstrap/scss/variables";
+@import "variables";
 // Core variables and mixins
-@import '../../node_modules/bootstrap/scss/mixins';
+@import "../../node_modules/bootstrap/scss/mixins";
 // Reset and dependencies
 // @import '../../node_modules/bootstrap/scss/normalize';
 // @import '../../node_modules/bootstrap/scss/print';
 // Core CSS
-@import '../../node_modules/bootstrap/scss/reboot';
+@import "../../node_modules/bootstrap/scss/reboot";
 // @import '../../node_modules/bootstrap/scss/type';
 // @import '../../node_modules/bootstrap/scss/images';
 // @import '../../node_modules/bootstrap/scss/code';
-@import '../../node_modules/bootstrap/scss/grid';
+@import "../../node_modules/bootstrap/scss/grid";
 // @import '../../node_modules/bootstrap/scss/tables';
 // @import '../../node_modules/bootstrap/scss/forms';
-@import '../../node_modules/bootstrap/scss/buttons';
+@import "../../node_modules/bootstrap/scss/buttons";
 // Components
-@import '../../node_modules/bootstrap/scss/transitions';
+@import "../../node_modules/bootstrap/scss/transitions";
 // @import '../../node_modules/bootstrap/scss/dropdown';
 // @import '../../node_modules/bootstrap/scss/button-group';
 // @import '../../node_modules/bootstrap/scss/input-group';
 // @import '../../node_modules/bootstrap/scss/custom-forms';
-@import '../../node_modules/bootstrap/scss/nav';
-@import '../../node_modules/bootstrap/scss/navbar';
+@import "../../node_modules/bootstrap/scss/nav";
+@import "../../node_modules/bootstrap/scss/navbar";
 // @import '../../node_modules/bootstrap/scss/card';
 // @import '../../node_modules/bootstrap/scss/breadcrumb';
 // @import '../../node_modules/bootstrap/scss/pagination';
@@ -44,17 +44,17 @@
 // @import '../../node_modules/bootstrap/scss/popover';
 // @import '../../node_modules/bootstrap/scss/carousel';
 // Utility classes
-@import '../../node_modules/bootstrap/scss/utilities';
+@import "../../node_modules/bootstrap/scss/utilities";
 
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 
-@import '../../node_modules/font-awesome/scss/variables';
-@import '../../node_modules/font-awesome/scss/mixins';
-@import '../../node_modules/font-awesome/scss/path';
-@import '../../node_modules/font-awesome/scss/core';
+@import "../../node_modules/font-awesome/scss/variables";
+@import "../../node_modules/font-awesome/scss/mixins";
+@import "../../node_modules/font-awesome/scss/path";
+@import "../../node_modules/font-awesome/scss/core";
 // @import '../../node_modules/font-awesome/scss/larger';
 // @import '../../node_modules/font-awesome/scss/fixed-width';
 // @import '../../node_modules/font-awesome/scss/list';
@@ -62,7 +62,9 @@
 // @import '../../node_modules/font-awesome/scss/animated';
 // @import '../../node_modules/font-awesome/scss/rotated-flipped';
 // @import '../../node_modules/font-awesome/scss/stacked';
-@import '../../node_modules/font-awesome/scss/icons';
-@import '../../node_modules/font-awesome/scss/screen-reader';
-@import 'aurelia';
-@import '../../node_modules/highlight.js/styles/github.css';
+@import "../../node_modules/font-awesome/scss/icons";
+@import "../../node_modules/font-awesome/scss/screen-reader";
+@import "aurelia";
+@import "../../node_modules/highlight.js/styles/github.css";
+
+@import "./post";
